--- a/PortfolioFinal/index.html
+++ b/PortfolioFinal/index.html
@@ -41,7 +41,7 @@
 						<h2>Webbutveckling<br />
 							HTML5, Javascript</h2>
 					</header>
-					<p>Med hjälp av framförallt html5 och javascript skapar jag fina, lättnavigerade, morderna och mobilanpassade hemsidor till dig och ditt företag!</p>
+					<p>Med hjälp av framförallt html5 och javascript skapar jag fina, lättnavigerade, moderna och mobilanpassade hemsidor till dig och ditt företag!</p>
 				</div>
 			</article>
 
