--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 								<h2>Samarbetspartners</h2>
 								<p>Vi på TV-TRIM har en nära relation med alla vara samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a> är vår största partner och vi har samarbetat sedan 1991, men vi har även
 									andra superduktiga partners som:<br/> 
-									<h6>Assist avkoncept?- <a href="https://avkoncept.com/" target="_blank">assisthalmstad.se</a></h6> 
+									<h6>Avkoncept- <a href="https://avkoncept.com/" target="_blank">Avkoncept.com</a></h6> 
 									<h6>Roland - <a href="https://www.roland.com/se/" target="_blank">Roland.com</a></h6>
-									<h6>Line6 - <a href="https://line6.com/" target="_blank">line6.com</a></h6>
-									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">sharp.se</a></h6>
-									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">ampeg.com</a></h6>
+									<h6>Line6 - <a href="https://line6.com/" target="_blank">Line6.com</a></h6>
+									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">Sharp.se</a></h6>
+									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">Ampeg.com</a></h6>
 									<h6>Yamaha - <a href="https://se.yamaha.com/index.html" target="_blank">Yamaha.com</a></h6>
 
 								</p>
