--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">TV TRIM</a></h1>
-						<nav>
+						<nav id="nav">
 							<ul>
-							  <li><a href="#one" class="scroll">Hur vi jobbar</a></li>
-							  <li><a href="#two" class="scroll">Partners</a></li>
-							  <li><a href="#three" class="scroll">Priser</a></li>
-							  <li><a href="#four" class="scroll">Kontakt</a></li>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Meny</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="#one" class="scroll">Hur vi jobbar</a></li>
+							  				<li><a href="#two" class="scroll">Partners</a></li>
+							  				<li><a href="#three" class="scroll">Priser</a></li>
+							  				<li><a href="#four" class="scroll">Kontakt</a></li>
+										</ul>
+									</div>
+								</li>
 							</ul>
-						  </nav>
+						</nav>
 					</header>
 
 				<!-- Banner -->
@@ -62,11 +69,11 @@
 								<h2>Samarbetspartners</h2>
 								<p>Vi på TV-TRIM har en nära relation med alla vara samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a> är vår största partner och vi har samarbetat sedan 1991, men vi har även
 									andra superduktiga partners som:<br/> 
-									<h6>Avkoncept - <a href="https://avkoncept.com/" target="_blank">Avkoncept.com</a></h6> 
+									<h6>Assist avkoncept?- <a href="https://avkoncept.com/" target="_blank">assisthalmstad.se</a></h6> 
 									<h6>Roland - <a href="https://www.roland.com/se/" target="_blank">Roland.com</a></h6>
-									<h6>Line6 - <a href="https://line6.com/" target="_blank">Line6.com</a></h6>
-									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">Sharp.se</a></h6>
-									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">Ampeg.com</a></h6>
+									<h6>Line6 - <a href="https://line6.com/" target="_blank">line6.com</a></h6>
+									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">sharp.se</a></h6>
+									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">ampeg.com</a></h6>
 									<h6>Yamaha - <a href="https://se.yamaha.com/index.html" target="_blank">Yamaha.com</a></h6>
 
 								</p>
@@ -87,7 +94,7 @@
 						
 						<section class="spotlight">
 							<section id="four"></section>
-							<div class="image2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2133.8981609808534!2d11.936764216103626!3d57.66721525019363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff38739ff7521%3A0x53156f359eb4f2df!2sTV%20Trim%20Service%20%26%20Aff%C3%A4rs%20AB!5e0!3m2!1ssv!2sse!4v1606774755944!5m2!1ssv!2sse" 
+							<div class="image2"><iframe class="gmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2133.8981609808534!2d11.936764216103626!3d57.66721525019363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff38739ff7521%3A0x53156f359eb4f2df!2sTV%20Trim%20Service%20%26%20Aff%C3%A4rs%20AB!5e0!3m2!1ssv!2sse!4v1606774755944!5m2!1ssv!2sse" 
 								width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div><div class="content">
 								<h2>Öppetider och var <br/>vi befinner oss</h2>
 								<h4>ÖPPETTIDER:</h4>
