--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>TV TRIM</title>
+		<title>TV-TRIM</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 			  </video>
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">TV TRIM</a></h1>
+						<h1><a href="index.html">TV-TRIM</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -69,11 +69,11 @@
 								<h2>Samarbetspartners</h2>
 								<p>Vi på TV-TRIM har en nära relation med alla vara samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a> är vår största partner och vi har samarbetat sedan 1991, men vi har även
 									andra superduktiga partners som:<br/> 
-									<h6>Assist avkoncept?- <a href="https://avkoncept.com/" target="_blank">assisthalmstad.se</a></h6> 
+									<h6>Avkoncept - <a href="https://avkoncept.com/" target="_blank">Avkoncept.com</a></h6> 
 									<h6>Roland - <a href="https://www.roland.com/se/" target="_blank">Roland.com</a></h6>
-									<h6>Line6 - <a href="https://line6.com/" target="_blank">line6.com</a></h6>
-									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">sharp.se</a></h6>
-									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">ampeg.com</a></h6>
+									<h6>Line6 - <a href="https://line6.com/" target="_blank">Line6.com</a></h6>
+									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">Sharp.se</a></h6>
+									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">Ampeg.com</a></h6>
 									<h6>Yamaha - <a href="https://se.yamaha.com/index.html" target="_blank">Yamaha.com</a></h6>
 
 								</p>
@@ -122,7 +122,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; TVTRIM1999</li><li>Design: <a href="http://html5up.net">Alexander Olofsson</a></li>
+							<li>&copy; TV-TRIM 1999</li><li>Design: <a href="http://html5up.net">Alexander Olofsson</a></li>
 						</ul>
 					</footer>
 
