--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<div class="image"><img src="images/partners.png" alt="" /></div><div class="content">
 								<section id="two"></section>
 								<h2>Samarbetspartners</h2>
-								<p>Vi på TV-TRIM har en nära relation med alla vara samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a> är vår största partner och vi har samarbetat sedan 1991, men vi har även
+								<p>Vi på TV-TRIM har en nära relation med alla våra samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a> är vår största partner och vi har samarbetat sedan 1991, men vi har även
 									andra superduktiga partners som:<br/> 
 									<h6>Avkoncept - <a href="https://avkoncept.com/" target="_blank">Avkoncept.com</a></h6> 
 									<h6>Roland - <a href="https://www.roland.com/se/" target="_blank">Roland.com</a></h6>
@@ -98,16 +98,16 @@
 								width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div><div class="content">
 								<h2>Öppetider och var <br/>vi befinner oss</h2>
 								<h4>ÖPPETTIDER:</h4>
-									<p>
-									Måndag till Fredag - 9 - 17<br />
-									Lunchstängt: 12-13<br />
-									Lördag & Söndag - Stängt</p>
+									
+									<h5>Måndag till Fredag - 9 - 17</h5>
+								<h5>Lunchstängt: 12-13</h5>
+									<h5>Lördag & Söndag - Stängt</h5>
 				<h4>ADRESS:</h4>
-					<p>
-					TV-Trim Service AB <br/>
-					J A Wettergrens gata 1 A <br/>
-					421 30  Västra Frölunda <br/>
-					Telefon: 031- 84 72 00</p>
+					<h5>
+					TV-Trim Service AB </h5>
+					<h5>J A Wettergrens gata 1 A</h5>
+					<h5>421 30  Västra Frölunda</h5>
+					<h5>Telefon: 031- 84 72 00</h5>
 							</div>
 						</section>
 					</section>
