--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							<section id="four"></section>
 							<div class="image2"><iframe class="gmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2133.8981609808534!2d11.936764216103626!3d57.66721525019363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff38739ff7521%3A0x53156f359eb4f2df!2sTV%20Trim%20Service%20%26%20Aff%C3%A4rs%20AB!5e0!3m2!1ssv!2sse!4v1606774755944!5m2!1ssv!2sse" 
 								width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div><div class="content">
-								<h2>Öppetider och var <br/>vi befinner oss</h2>
+								<h2>Öppettider och var <br/>vi befinner oss</h2>
 								<h4>ÖPPETTIDER:</h4>
 									
 									<h5>Måndag till Fredag - 9 - 17</h5>
