--- a/index.html
+++ b/index.html
@@ -116,13 +116,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/tvtrim" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:service@tv-trim.se" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; TV-TRIM 1999</li><li>Design: <a href="http://html5up.net">Alexander Olofsson</a></li>
+							<li>&copy; TV-TRIM 1999</li><li>Design: <a href="mailto:alex.j.olofsson@gmail.com">Alexander Olofsson</a></li>
 						</ul>
 					</footer>
 
