--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<a href="#menu" class="menuToggle"><span>Meny</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="#one" class="scroll">Hur vi jobbar</a></li>
+											<li><a href="#one" class="scroll">Reperation & Service</a></li>
 							  				<li><a href="#two" class="scroll">Partners</a></li>
 							  				<li><a href="#three" class="scroll">Priser</a></li>
 							  				<li><a href="#four" class="scroll">Kontakt</a></li>
@@ -43,6 +43,7 @@
 						<div class="inner">
 							<h2>TV-TRIM <br />
 							Service & Affärs AB</h2>
+							<h3>Teknisk service, renovering och reparation inom <br />ljud, bild och musikinstrument!</h3>
 							<p>Auktoriserad service av<br />
 							Yamaha, Line6, Ampeg, Sharp och Roland<br />
 
@@ -54,37 +55,50 @@
 					<section id="one" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/repair.jpg" alt="" /></div><div class="content">
-								<h2>Hur vi jobbar?<br />
+								<h2>
 								Reperation & Service på komponentnivå! </h2>
 								<p>
-								Vi har hand om service & reparation på komponentnivå för alla musik, ljud- och hi-fi produkter. 	
-								Vi servar mixerbord, musikinstrument, Pro Audio, LCD-TV, projektorer och hemmabiosystem. 
+									TV-Trim utför teknisk service och reparation på komponentnivå i vår verkstad i Göteborg för alla
+									musik, ljud- och hi-fi produkter samt hemelektronik tex TV, projektorer, flygel, mixerbord, gitarrer,
+									DJ utrustning, digitalpiano högtalare, hemmabiosystem, rullbandsspelare, PRO Audio, brunvaror
+									etc! <br/><br/>
+									TV Trim reparerar, renoverar, lagar och ger service åt all tänkbar utrustning inom elektronik. Vi har varit
+									verksamma sedan 1991 och besitter en gedigen kompetens och erfarenhet – vi löser det mesta!
+				<h1>garantiärenden</h1>
+				<b>Kontakta oss direkt gällande garantiärenden för service av Yamaha och Sharpprodukter – tag med
+kvitto!</b>
 								</p>
 							</div>
 						</section>
 						
 						<section class="spotlight">
-							<div class="image"><img src="images/partners.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/partners2.png" alt="" /></div><div class="content">
 								<section id="two"></section>
 								<h2>Samarbetspartners</h2>
-								<p>Vi på TV-TRIM har en nära relation med alla våra samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a> är vår största partner och vi har samarbetat sedan 1991, men vi har även
-									andra superduktiga partners som:<br/> 
+								<p>TV-Trim har en långvarig och nära kontakt med alla våra samarbetspartners. <a href="https://se.yamaha.com/index.html" target="_blank"> <b>Yamaha</b></a>
+									har vi ett nära samarbete med sedan 1991 och handhar all service och reparation på Yamahas
+									musik-, ljud- och hi-fi produkter <b>förutom</b> blåsinstrument och sitter i deras byggnad. 
 									<h6>Avkoncept - <a href="https://avkoncept.com/" target="_blank">Avkoncept.com</a></h6> 
 									<h6>Roland - <a href="https://www.roland.com/se/" target="_blank">Roland.com</a></h6>
 									<h6>Line6 - <a href="https://line6.com/" target="_blank">Line6.com</a></h6>
 									<h6>Sharp - <a href="https://www.sharp.se/" target="_blank">Sharp.se</a></h6>
 									<h6>AMpeg - <a href="https://ampeg.com/index.html" target="_blank">Ampeg.com</a></h6>
 									<h6>Yamaha - <a href="https://se.yamaha.com/index.html" target="_blank">Yamaha.com</a></h6>
-
-								</p>
+									
+									Vi utför teknisk service och reparationer på bla följande brunvaror:
+									Hisense, Hitachi, Panasonic, Pioneer, Sharp och TV; LG, Luxlor, Sony, Loewe. <br/><br/>
 							</div>	
 						</section>
-				<section id="three">
-						<section class="spotlight">
+						<section id="three">
+						<section class="spotlight">	
 							<div class="image"><img src="images/workplace.webp" alt="" /></div><div class="content">
-								<h2>Priser & Kontaktinfo</h2>
-								<p>Vi har inga fasta priser - priserna varierar beroende på produkt, vilka komponenter som behöver ersättning m.m.
-								för fler frågor kontakta oss via telefon eller email!</p>
+								<h2>Priser och kontaktinformation</h2>
+								<p>
+									Vi gör hembesök i Göteborgsområdet där fast avgift går på <b>1500kr</b> utgår + timersättning <b>450kr</b> 
+									inklusive moms. <br/><br/>
+									Priser för inlämnade eller tillsända produkter till vår verkstad varierar beroende på vad som behövs
+									repareras och ersättas. En undersökningsavgift är på <b>595kr</b> inklusive moms debiteras där vi tar fram
+									ett kostnadsförslag på reparationen/servicen vilken ingår om du väljer att reparera produkten.</p>
 									<h4>Telefon</h4>
 									<p>031- 84 72 00</p>
 									<h4>Email</h4>
@@ -107,7 +121,6 @@
 					TV-Trim Service AB </h5>
 					<h5>J A Wettergrens gata 1 A</h5>
 					<h5>421 30  Västra Frölunda</h5>
-					<h5>Telefon: 031- 84 72 00</h5>
 							</div>
 						</section>
 					</section>
